# GrayscaleCUDA

./: .gitattributes  CMakeLists.txt  README.md  main.cu  pixel.h
cpu/: grayscaleCPU.cpp  grayscaleCPU.h
gpu/: Error.cuh  WrapperGPU.cuh  grayscaleGPU.cu  grayscaleGPU.cuh
stb/: CMakeLists.txt
